--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "release": "bumpp --commit --push --tag && pnpm publish",
-    "play": "pnpm -C playground run dev",
+    "play:vue": "pnpm -C playground/vue run dev",
     "start": "esno src/index.ts",
     "test": "vitest"
   },
