--- a/playground/vue/package.json
+++ b/playground/vue/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.12.0",
+    "unplugin-auto-import-api": "workspace:*",
     "vue": "3.2.47"
   },
   "devDependencies": {
