--- a/package.json
+++ b/package.json
@@ -98,7 +98,8 @@
     "@rollup/pluginutils": "^5.0.2",
     "local-pkg": "^0.4.3",
     "magic-string": "^0.30.0",
-    "unimport": "^2.2.4",
+    "minimatch": "^7.2.0",
+    "unimport": "^3.0.2",
     "unplugin": "^1.1.0"
   },
   "devDependencies": {
@@ -107,13 +108,14 @@
     "@types/node": "^18.14.2",
     "@types/resolve": "^1.20.2",
     "@vueuse/metadata": "^9.13.0",
-    "bumpp": "^8.2.1",
+    "bumpp": "^9.0.0",
     "eslint": "^8.35.0",
     "esno": "^0.16.3",
     "fast-glob": "^3.2.12",
     "rollup": "^3.17.3",
     "tsup": "^6.6.3",
     "typescript": "^4.9.5",
+    "unplugin-vue-components": "^0.24.0",
     "vite": "^4.1.4",
     "vitest": "^0.29.1",
     "webpack": "^5.75.0"
